refactor(wyszukiwarka): move 'search.js' to `/static/base.js`

--- a/bcs/wyszukiwarka/templates/wyszukiwarka/search_results.html
+++ b/bcs/wyszukiwarka/templates/wyszukiwarka/search_results.html
@@ -43,6 +43,6 @@
                 <p>No results found.</p>
             {% endif %}
         {% endif %}
-        <script src="{% static 'wyszukiwarka/js/search.js' %}"></script>
+        <script src="{% static 'js/base.js' %}"></script>
     </body>
 </html>
