--- a/bcs/spiewnik/templates/spiewnik/spis_tresci.html
+++ b/bcs/spiewnik/templates/spiewnik/spis_tresci.html
@@ -11,14 +11,16 @@
             <h1 class="toc__title">Spis treści</h1>
             {% for category, songs in songs_by_category %}
                 {% if songs %}
-                    <h2 class="toc__category-title">{{ category.nazwa }}</h2>
-                    <ul class="toc__list">
-                        {% for song in songs %}
-                            <li class="toc__item">
-                                <a href="{% url 'spiewnik:piosenka' song.pk %}" class="toc__link">{{ song.tytul }}</a>
-                            </li>
-                        {% endfor %}
-                    </ul>
+                    <div class="category">
+                        <h2 class="toc__category-title" onclick="toggleCategory(this)">{{ category.nazwa }}</h2>
+                        <ul class="toc__list" style="display: none;">
+                            {% for song in songs %}
+                                <li class="toc__item">
+                                    <a href="{% url 'spiewnik:piosenka' song.pk %}" class="toc__link">{{ song.tytul }}</a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
                 {% endif %}
             {% endfor %}
             {% if uncategorized %}
@@ -34,5 +36,6 @@
                 </div>
             {% endif %}
         </div>
+        <script src="{% static 'spiewnik/js/spis_tresci.js' %}"></script>
     </body>
 </html>
