feat(spiewnik): add link from `spis_tresci_kat` view to `spis_tresci` view
Users can now return to `spis_tresci` view by using link in `spis_tresci_kat` title

--- a/bcs/spiewnik/static/spiewnik/css/spis_tresci.css
+++ b/bcs/spiewnik/static/spiewnik/css/spis_tresci.css
@@ -17,6 +17,22 @@ body {
   text-align: center;
 }
 
+.ltoc__title-link {
+  display: inline-block;
+  cursor: pointer;
+  transition: color 0.2s, border-bottom-color 0.2s;
+  border-bottom: 2px solid transparent;
+  user-select: none;
+  color: #2c3e50;
+  font-size: 2rem;
+  text-decoration: none; /* remove default underline */
+}
+
+.ltoc__title-link:hover {
+  color: #2980b9;
+  border-bottom-color: #2980b9;
+}
+
 /* Title */
 .toc__title {
   text-align: center;
