--- a/bcs/spiewnik/templates/spiewnik/spis_tresci_kat.html
+++ b/bcs/spiewnik/templates/spiewnik/spis_tresci_kat.html
@@ -1,4 +1,9 @@
 {% extends "spiewnik/spis_tresci_layout.html" %}
+{% block title %}
+    <h1>
+        <a href="{% url 'spiewnik:spis_tresci' %}" class="ltoc__title-link">Spis treści</a>
+    </h1>
+{% endblock %}
 {% block categorized_songs %}
     <div class="category">
         <h2 class="ltoc__category-title">{{ category.nazwa }}</h2>
@@ -10,4 +15,4 @@
             {% endfor %}
         </ul>
     </div>
-{% endblock categorized_songs %}
+{% endblock %}
