fix(spiewnik): center categories in `song` view
In .song__category style class:
- Set text-align to center
- Increase line height to 1.5 rem

--- a/bcs/spiewnik/static/spiewnik/css/piosenka.css
+++ b/bcs/spiewnik/static/spiewnik/css/piosenka.css
@@ -50,6 +50,8 @@ h2 {
   font-weight: bold;
   color: #2c3e50;
   margin-bottom: 20px;
+  line-height: 1.5;
+  text-align: center;
 }
 
 .song__category-link {
