--- a/bcs/spiewnik/static/spiewnik/css/piosenka.css
+++ b/bcs/spiewnik/static/spiewnik/css/piosenka.css
@@ -79,7 +79,8 @@ h2 {
 
 .song__header-row {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 15px;
   align-items: center;
   margin-bottom: 10px;
   padding: 0 15px; /* match lyrics box padding */
