--- a/bcs/spiewnik/templates/spiewnik/piosenka.html
+++ b/bcs/spiewnik/templates/spiewnik/piosenka.html
@@ -24,7 +24,9 @@
                     <h1 class="song__title">{{ title }}</h1>
                     {% if request.user.is_staff %}<a href="{{ admin_url }}" class="song__edit-button">✏️ Edytuj</a>{% endif %}
                 </div>
-                <div class="song__author">{{ author }}</div>
+                <div class="song__authors">
+                    <em class="song__authors-label">{{ authors_label }}</em>{{ authors }}
+                </div>
                 {% if category %}
                     <div class="belt">
                         <div class="belt__prev-section">
