style(spiewnik): format templates with djlint

--- a/bcs/spiewnik/templates/spiewnik/spis_tresci_layout.html
+++ b/bcs/spiewnik/templates/spiewnik/spis_tresci_layout.html
@@ -8,12 +8,9 @@
     </head>
     <body>
         <div class="toc">
-            {% block title %}
-            {% endblock %}
-            {% block categorized_songs %}
-            {% endblock %}
-            {% block uncategorized_songs %}
-            {% endblock %}
+            {% block title %}{% endblock %}
+            {% block categorized_songs %}{% endblock %}
+            {% block uncategorized_songs %}{% endblock %}
         </div>
         <script src="{% static 'spiewnik/js/spis_tresci.js' %}"></script>
     </body>
