--- a/bcs/spiewnik/templates/spiewnik/piosenka.html
+++ b/bcs/spiewnik/templates/spiewnik/piosenka.html
@@ -23,13 +23,6 @@
                         Brak kategorii
                     {% endif %}
                 </div>
-                <div class="song__header-row">
-                    <h1 class="song__title">{{ title }}</h1>
-                    {% if request.user.is_staff %}<a href="{{ admin_url }}" class="song__edit-button">✏️ Edytuj</a>{% endif %}
-                </div>
-                <div class="song__authors">
-                    <em class="song__authors-label">{{ authors_label }}</em>{{ authors }}
-                </div>
                 {% if category %}
                     <div class="belt">
                         <div class="belt__category">
@@ -58,6 +51,14 @@
                         </div>
                     </div>
                 {% endif %}
+                <div class="song__header-row">
+                    {% if request.user.is_staff %}<a href="{{ admin_url }}" class="song__invisible-button">✏️ Edytuj</a>{% endif %}
+                    <h1 class="song__title">{{ title }}</h1>
+                    {% if request.user.is_staff %}<a href="{{ admin_url }}" class="song__edit-button">✏️ Edytuj</a>{% endif %}
+                </div>
+                <div class="song__authors">
+                    <em class="song__authors-label">{{ authors_label }}</em>{{ authors }}
+                </div>
             </div>
         </div>
         <div class="lyrics">
